--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^6.9.0",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.3",
