--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "schema": "prisma/schema-mongodb.prisma"
+  },
   "dependencies": {
-    "@auth/mongodb-adapter": "^3.7.0",
+    "@auth/prisma-adapter": "^2.7.2",
+    "@prisma/client": "^5.21.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.447.0",
-    "mongodb": "^6.9.0",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
@@ -30,6 +33,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
